overflow solved

--- a/css/component.css
+++ b/css/component.css
@@ -64,6 +64,7 @@ body,
 	left: 0;
 	z-index: 100;
 	visibility: hidden;
+	overflow: auto;
 	width: 300px;
 	height: 100%;
 	background: #48a770;
